--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -7,12 +7,8 @@
     
     border: 2px solid grey;
     border-radius: 10px;
-    max-width: 400px;
-    height: 550px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    width: 450px;
+    max-height: 550px;
     background-color: rgb(62, 64, 66);
     display: flex;
     flex-direction: column;
@@ -24,20 +20,20 @@
     text-align: center;
     color: whitesmoke;
     padding-top: 10px;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
     
 }
 
 .addingTask{
+    
     display: flex;
-    min-width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     
 }
 .input-task{
-    width: 75%;
+    flex:5;
     border: none;
     font-size: 16px;
     font-size: max(16px, 1em);
@@ -56,7 +52,7 @@
   
 .button-add{
     margin: 0px;
-    width: 90px;
+    flex:1;
     background-color: rgb(211, 240, 108);
     color: rgb(0, 0, 0);
     transition: .5s ease;
@@ -66,10 +62,10 @@
     color: rgb(255, 255, 255);
     
 }
-.displayTask{
-       
+.displayTask{ 
     flex: 1;
     overflow: auto;
+    overflow-x: hidden;
 }
 /*style scroll bar*/
 ::-webkit-scrollbar{
@@ -104,6 +100,7 @@
     margin-left: 10px;
     
 }
+
 .task-content{
     margin: 0;
     padding: 0;
